Icon small coverage color fix

--- a/server/theme/theme.css
+++ b/server/theme/theme.css
@@ -337,7 +337,7 @@ a:hover {
 [class^="icon-small--"], [class*=" icon-small--"] {
     color: #CC212C;
 }
-[class^="icon--coverage-"], [class*=" icon--coverage-"] {
+[class^="icon--coverage-"], [class*=" icon--coverage-"], [class^="icon-small--coverage-"], [class*=" icon-small--coverage-"] {
     color: #747474;
 }
 .sidenav-icons [class^="icon--"], [class*=" icon--"] {
